# DevInHouse_ConectaNuvem

./: README.md  classe.js  index2403.html
M1S1/: estilos.css  imagens.html  index.html  index03.html  style.css
M1S10/MyPark/: README.md  index.html  package-lock.json  package.json
M1S10/aula02/: README.md  index.html  package-lock.json  package.json
M1S10/aula0205/: README.md  index.html  package-lock.json  package.json
M1S10/aula0305/: README.md  index.html  package-lock.json  package.json
M1S10/aula0405/: README.md  index.html  package-lock.json  package.json
M1S11/aula1005/: index.html  package-lock.json
M1S2/: calc.js  estilo.css  index.html  index10.03.02.html  index10.03.03.html  index10.03.html  script.js  script2.js  script3.js  style.css  teste01.js
M1S2/ex04/: index.html  script.js  style.css
M1S3/: 15.03.html  1503.js  18.03.html  18.03.js  24.03.js  dio.js  index.html  index.js  index2.html  index2.js  script.js  script1703.js  script2.js  scripts.js
M1S4/: 21.03.js  22.03.html  22.03.js  22.03desafio.js  24.03.closure.js  24.03.html  24.03.js  index.html  revisao21.03.js  script.js  script2.js  style.css
M1S4/pratica2403/: index.html  script.js  style.css
M1S5/: 28.03.html  28.03.js  29.03 revisao.js  29.03.html  2903.html  2903.js  script_29.03.js  utils_29.03.js
M1S5/31.03/: 31.03.html  app.js
M1S7/: 1104.html  1204.html  desafio.html  style.css
M1S7/calculadora_imc/: package-lock.json  package.json
M2S1/: index.html
M2S3/aula1706/app/: ex02.py  exerx01.py  pyproject.toml
M2S7/: anotacoes.txt
M2S8/: 1508.SQL
(+119 files in other folders)
